2649 [ChapterCreator]       added the PGC number to the output as suffix
2648 [VobSubber]            added the PGC number to the output as suffix
                            preselect tracks based on the default language(s)
							improved logging
2647 [PGCDemux]             changed where the intermediate files are created
2646 [VobSubber] +          use the default MeGUI output path if possible. Feature request #597
     [ChapterCreator]       for DVD/Blu-ray sources a prefix is attached to the output file name. Feature request #597
2645 [VobSubber]            added option to demux all tracks in a single file (as before 2637). Feature request #595
2644 [HD Streams Extractor] added IDX/VobSub as unsupported format
2643 [x264]                 adjusted "--preset slow" settings (requires x264 2721+). Bug #855
2642 [L-SMASH Indexer]      blocked the VC-1 codec as it is not properly supported anymore. Bug #851
2641 [AudioEncoder]         fixed handling of MediaInfo information for HD audio tracks
2640 [AviSynth]             improved debug handling
2639 [Main]                 removed aspect ratio controls from the video preview control. Bug #843
2638 [Profile]              added support to import old export files (regression of 2635). Bug #849
2637 [VobSubber]            each track will be demuxed into a dedicated file set to avoid missing tracks when muxing. Bug #845
     [VobSubber]+[OneClick] for multiple tracks the source will only be indexed once
2636 [Audio Encoder]        cosmetic change. Bug #826
2635 [Profile]              fixed import & export of profiles (regression of 2590). Bug #842
2634 [L-SMASH Indexer]      added support for MSVC 2015 runtimes
2633                        updated the wiki links to point to https://en.wikibooks.org/wiki/MeGUI
2631 [MediaInfo]            improved DVD audio track language detection
2630 [Audio Encoder]        fixed a crash if a very large audio delay is used